--- a/src/pages/main.html
+++ b/src/pages/main.html
@@ -325,6 +325,7 @@
         <div class="tab-pane fade" id="card-info-pane" role="tabpanel" aria-labelledby="pills-contact-tab">
             <div class="d-flex flex-column align-items-center">
                 <div class="card-info">
+                    <p>Card holder: <span class="card-info__holder">Nikita</span></p>
                     <p>Card number: <span class="card-info__card-number">5168 9738 6748 9673</span></p>
                     <p>Bank: <span class="card-info__bank">Privat</span></p>
                     <p>Balance: <span class="card-info__balance">15000</span></p>
