--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/css/style.min.css">
+    <script defer src="../js/login.js"></script>
+
     <title>Storage</title>
 </head>
 <body>
@@ -17,13 +19,15 @@
     <h1 class="main-title text-center">ATM Bublyk</h1>
     <form class="login-form d-flex flex-column">
         <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Card number</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <label for="login-card-number-input" class="form-label">Card number</label>
+            <input type="text" class="form-control" id="login-card-number-input" aria-describedby="emailHelp">
         </div>
         <div class="mb-3">
-            <label for="pin-input" class="form-label">Pin</label>
-            <input type="password" class="form-control" id="pin-input">
+            <label for="login-pin-input" class="form-label">Pin</label>
+            <input type="password" class="form-control" id="login-pin-input">
         </div>
+
+        <p class="login-invalid d-none">Invalid credentials</p>
         <button type="submit" class="btn btn-primary align-self-center submit-login">Submit</button>
     </form>
 </div>
