--- a/src/login.html
+++ b/src/login.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="icon" href="../assets/img/favicon.png" sizes="32x32">
+    <link rel="icon" href="assets/img/favicon.png" sizes="32x32">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../assets/css/style.min.css">
-    <script defer src="../js/login.js"></script>
+    <link rel="stylesheet" href="assets/css/style.min.css">
+    <script defer src="js/login.js"></script>
 
     <title>Storage</title>
 </head>
@@ -18,13 +18,14 @@
 <div class="container main-container login-container">
     <h1 class="main-title text-center">ATM Bublyk</h1>
     <form class="login-form d-flex flex-column">
-        <div class="mb-3">
+        <strong class="login-form__expired_session d-none">Session is expired. Please relogin.</strong>
+        <div class="login-form__card">
             <label for="login-card-number-input" class="form-label">Card number</label>
-            <input type="text" class="form-control" id="login-card-number-input" aria-describedby="emailHelp">
+            <input type="text" class="form-control" id="login-card-number-input" aria-describedby="emailHelp" autocomplete="off">
         </div>
-        <div class="mb-3">
+        <div class="login-form__pin">
             <label for="login-pin-input" class="form-label">Pin</label>
-            <input type="password" class="form-control" id="login-pin-input">
+            <input type="password" class="form-control" id="login-pin-input" autocomplete="off">
         </div>
 
         <p class="login-invalid d-none">Invalid credentials</p>
