--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.min.css">
-    <script defer src="js/main.js"></script>
+    <script defer src="js/dashboard.js"></script>
     <title>Storage</title>
 </head>
 <body>
@@ -130,11 +130,11 @@
         </div>
         <div class="tab-pane fade" id="regular-payments-pane" role="tabpanel" aria-labelledby="pills-contact-tab">
             <div class="regular-payments d-flex flex-column">
-                <div class="spinner-border text-primary regular-payments-spinner" role="status">
+                <div class="spinner-border text-primary regular-payments-spinner align-self-center" role="status">
                     <span class="visually-hidden">Loading...</span>
                 </div>
 
-                <p class="no-regular-payments-label d-none">There are no regular payments yet.</p>
+                <p class="no-regular-payments-label align-self-center d-none">There are no regular payments yet.</p>
 
                 <div class="row row-cols-1 row-cols-md-3 g-4 regular-payments__card-list">
 <!--                    <div class="col">-->
@@ -308,38 +308,45 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h2 class="modal-title fs-4 add-regular-payment-modal__title" id="exampleModalLabel">Add regular payment</h2>
+                <div class="d-flex align-items-baseline">
+                    <h2 class="modal-title fs-4 add-regular-payment-modal__title" id="exampleModalLabel">Add regular payment</h2>
+                    <div class="spinner-border text-primary add-regular-payment-spinner d-none" role="status">
+                        <span class="visually-hidden">Loading...</span>
+                    </div>
+                </div>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body add-regular-payment-modal__body">
-                <form class="d-flex flex-column">
+                <form class="d-flex flex-column add-regular-payment-form">
                     <div class="add-regular-payment-modal__destination-card">
                         <label for="add-regular-payment-destination-card" class="form-label">Destination card</label>
-                        <input type="text" class="form-control" id="add-regular-payment-destination-card" aria-describedby="emailhelp">
+                        <input type="number" class="form-control" id="add-regular-payment-destination-card" aria-describedby="emailhelp" min="1">
                     </div>
                     <div class="add-regular-payment-modal__amount">
                         <label for="add-regular-payment-amount" class="form-label">Amount</label>
-                        <input type="number" class="form-control" id="add-regular-payment-amount" aria-describedby="emailhelp">
+                        <input type="number" class="form-control" id="add-regular-payment-amount" aria-describedby="emailhelp" min="1" max="15000">
                     </div>
 
                     <div>
                         <p class="add-regular-payment-modal__periodicity-title">Periodicity</p>
                         <div class="btn-group add-regular-payment-modal__periodicity" role="group" aria-label="Basic radio toggle button group">
-                            <input type="radio" class="btn-check" name="btnradio" id="btnradio1n" autocomplete="off" checked>
-                            <label class="btn btn-outline-secondary add-regular-payment-modal__label" for="btnradio1n">Weekly</label>
+                            <input type="radio" class="btn-check add-regular-payment-modal__periodicity-radio" name="btnradio" id="add-regular-payment-weekly-radio" autocomplete="off" checked value="weekly">
+                            <label class="btn btn-outline-secondary add-regular-payment-modal__label" for="add-regular-payment-weekly-radio">Weekly</label>
 
-                            <input type="radio" class="btn-check" name="btnradio" id="btnradio2n" autocomplete="off">
-                            <label class="btn btn-outline-secondary add-regular-payment-modal__label" for="btnradio2n">Monthly</label>
+                            <input type="radio" class="btn-check add-regular-payment-modal__periodicity-radio" name="btnradio" id="add-regular-payment-monthly-radio" autocomplete="off" value="monthly">
+                            <label class="btn btn-outline-secondary add-regular-payment-modal__label" for="add-regular-payment-monthly-radio">Monthly</label>
 
-                            <input type="radio" class="btn-check" name="btnradio" id="btnradio3n" autocomplete="off">
-                            <label class="btn btn-outline-secondary add-regular-payment-modal__label" for="btnradio3n">Annually</label>
+                            <input type="radio" class="btn-check add-regular-payment-modal__periodicity-radio" name="btnradio" id="add-regular-payment-annually-radio" autocomplete="off" value="annually">
+                            <label class="btn btn-outline-secondary add-regular-payment-modal__label" for="add-regular-payment-annually-radio">Annually</label>
                         </div>
                     </div>
 
                     <div class="add-regular-payment-modal__first-payment-date">
                         <label for="add-regular-payment-first-payment-date" class="form-label">First payment date</label>
-                        <input type="date" class="form-control" id="add-regular-payment-first-payment-date" aria-describedby="emailhelp">
+                        <input type="datetime-local" class="form-control" id="add-regular-payment-first-payment-date" aria-describedby="emailhelp">
                     </div>
+
+                    <p class="add-regular-payment-invalid d-none"></p>
 
                     <button type="submit" class="btn btn-primary add-regular-payment-modal__submit-btn align-self-center">Add</button>
                 </form>
@@ -353,14 +360,19 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h2 class="modal-title fs-4 edit-regular-payment-modal__title" id="exampleModalLabel">Edit regular payment</h2>
+                <div class="d-flex align-items-baseline">
+                    <h2 class="modal-title fs-4 edit-regular-payment-modal__title" id="exampleModalLabel">Edit regular payment</h2>
+                    <div class="spinner-border text-primary edit-regular-payment-spinner d-none" role="status">
+                        <span class="visually-hidden">Loading...</span>
+                    </div>
+                </div>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body edit-regular-payment-modal__body">
                 <form class="d-flex flex-column">
                     <div class="edit-regular-payment-modal__destination-card">
                         <label for="edit-regular-payment-destination-card" class="form-label">Destination card</label>
-                        <input type="text" class="form-control" id="edit-regular-payment-destination-card" aria-describedby="emailhelp">
+                        <input type="amount" class="form-control" id="edit-regular-payment-destination-card" aria-describedby="emailhelp">
                     </div>
                     <div class="edit-regular-payment-modal__amount">
                         <label for="edit-regular-payment-amount" class="form-label">Amount</label>
@@ -370,25 +382,29 @@
                     <div>
                         <p class="edit-regular-payment-modal__periodicity-title">Periodicity</p>
                         <div class="btn-group edit-regular-payment-modal__periodicity" role="group" aria-label="Basic radio toggle button group">
-                            <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
-                            <label class="btn btn-outline-secondary edit-regular-payment-modal__label" for="btnradio1">Weekly</label>
+                            <input type="radio" class="btn-check edit-regular-payment-modal__periodicity-radio" name="periodicity" id="edit-regular-payment-periodicity-weekly" value="weekly" autocomplete="off" checked>
+                            <label class="btn btn-outline-secondary edit-regular-payment-modal__label" for="edit-regular-payment-periodicity-weekly">Weekly</label>
 
-                            <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
-                            <label class="btn btn-outline-secondary edit-regular-payment-modal__label" for="btnradio2">Monthly</label>
+                            <input type="radio" class="btn-check edit-regular-payment-modal__periodicity-radio" name="periodicity" id="edit-regular-payment-periodicity-monthly" value="monthly" autocomplete="off">
+                            <label class="btn btn-outline-secondary edit-regular-payment-modal__label" for="edit-regular-payment-periodicity-monthly">Monthly</label>
 
-                            <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
-                            <label class="btn btn-outline-secondary edit-regular-payment-modal__label" for="btnradio3">Annually</label>
+                            <input type="radio" class="btn-check edit-regular-payment-modal__periodicity-radio" name="periodicity" id="edit-regular-payment-periodicity-annually" value="annually" autocomplete="off">
+                            <label class="btn btn-outline-secondary edit-regular-payment-modal__label" for="edit-regular-payment-periodicity-annually">Annually</label>
                         </div>
                     </div>
 
                     <div class="edit-regular-payment-modal__first-payment-date">
                         <label for="edit-regular-payment-first-payment-date" class="form-label">First payment date</label>
-                        <input type="date" class="form-control" id="edit-regular-payment-first-payment-date" aria-describedby="emailhelp">
+                        <input type="datetime-local" class="form-control" id="edit-regular-payment-first-payment-date" aria-describedby="emailhelp">
                     </div>
 
-                    <div class="align-self-center d-flex">
-                        <button type="submit" class="btn btn-primary edit-regular-payment-modal__save-btn">Save</button>
-                        <button type="submit" class="btn btn-outline-danger edit-regular-payment-modal__remove-btn">Remove</button>
+                    <p class="edit-regular-payment-invalid d-none"></p>
+
+                    <div class="align-self-center d-flex edit-regular-payment-btns">
+                        <form>
+                            <button type="submit" class="btn btn-primary edit-regular-payment-modal__save-btn" disabled>Save</button>
+                        </form>
+                        <button type="button" class="btn btn-outline-danger edit-regular-payment-modal__remove-btn">Remove</button>
                     </div>
                 </form>
             </div>
@@ -451,7 +467,33 @@
     </div>
 </div>
 
+<div class="modal fade" id="remove-regular-payment-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"
+     data-bs-backdrop="static">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <div class="d-flex align-items-baseline">
+                    <h2 class="modal-title fs-4 remove-regular-payment-modal__title" id="exampleModalLabel">Remove regular payment</h2>
+                    <div class="spinner-border text-primary remove-regular-payment-spinner d-none" role="status">
+                        <span class="visually-hidden">Loading...</span>
+                    </div>
+                </div>
+                <button type="button" class="btn-close remove-regular-payment-modal__close-btn" aria-label="Close"></button>
+            </div>
+            <div class="modal-body remove-regular-payment-modal__body">
+                <p class="remove-regular-payment-modal__confirmative-question"></p>
+                <div class="d-flex">
+                    <form class="remove-regular-payment-modal__remove-form">
+                        <button type="submit" class="btn btn-danger remove-regular-payment-modal__remove-btn">Yes, remove</button>
+                    </form>
+                    <button type="button" class="btn btn-outline-secondary remove-regular-payment-modal__cancel-btn">Cancel</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<!--<script src="../js/main.js"></script>-->
+<!--<script src="../js/dashboard.js"></script>-->
 </body>
 </html>
